# unirock_fastapi

./: .envrc  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: b4ee858acc2b_fix_lead_price_precision_scale.py  e7cabaee4297_create_amo_tables.py
src/unirock/: asgi.py  settings.py
src/unirock/amo/: __init__.py  logger.py  settings.py
src/unirock/amo/api/v1/: __init__.py  leads.py  pipelines.py  sync.py  webhook.py
src/unirock/amo/client/: auth.py  client.py
src/unirock/amo/entity/: lead.py  pipeline.py  status.py
src/unirock/amo/repository/: __init__.py
src/unirock/amo/repository/local/: leads.py  pipelines.py  statuses.py
src/unirock/amo/schema/response/: AmoLeadResponseDto.py  AmoPipelineResponseDto.py  AmoStatusMinimalResponseDto.py  __init__.py
src/unirock/amo/service/: __init__.py
src/unirock/amo/service/internal/: InternalAmoLeadEventService.py  InternalLeadService.py  InternalPipelineService.py  InternalStatusService.py  InternalSyncService.py  __init__.py
src/unirock/bible/entity/: account.py  counterparty.py  employee.py  payment.py
src/unirock/bible/enums/: enums.py
src/unirock/core/clients/: redis_client.py
src/unirock/core/entity/: __init__.py  app_events.py
src/unirock/core/service/: audit.py
src/unirock/currency/client/: cbr.py
src/unirock/migrations/: env.py
src/unirock/migrations/versions/: 18169208b2d5_alter_status_pk.py
src/unirock/price_offer/entity/: offer_configuration.py  offer_version.py  project.py
src/unirock/shared/: broker.py  logger.py  parameters.py
src/unirock/shared/clients/: database.py
src/unirock/shared/repository/database/: __init__.py  (+2 more)
src/unirock/shared/schema/: __init__.py  mappable_schema.py
src/unirock/shared/service/: abstract_service.py
src/unirock/system_events/entity/: __init__.py  app_events.py
src/unirock/system_events/repository/: system_event.py
src/unirock/system_events/scheduler/: vacuum_events.py
src/unirock/system_events/schema/: __init__.py  system_event.py
src/unirock/system_events/service/: __init__.py  system_events.py
src/unirock/users/: config.py
src/unirock/users/client/: keycloak_admin_client.py  keycloak_connection.py
src/unirock/users/schema/: __init__.py  users.py
src/unirock/users/service/: users.py
tests/: conftest.py
tests/amo/: test_webhook.py
(+2 files in other folders)
