[project]
name = "bible"
version = "0.1.0"
description = ""
authors = [{ name = "Mikhail Plekhanov", email = "kiortir@yandex.ru" }]
requires-python = "==3.13.*"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "sqlalchemy[asyncio] (>=2.0.39,<3.0.0)",
    "faststream[redis] (>=0.5.37,<0.6.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "redis[hiredis] (>=5.2.1,<6.0.0)",
    "yarl (>=1.18.3,<2.0.0)",
    "httpx-limiter (>=0.1.0,<0.2.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "qsparser (>=1.1.0,<2.0.0)",
    "python-json-logger (>=3.3.0,<4.0.0)",
    "defusedxml (>=0.7.1,<0.8.0)",
    "python-keycloak (>=5.3.1,<6.0.0)",
    "pyjwt[crypto]>=2.10.1",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv==1.1.0",
    "ruff>=0.11.5",
]

[tool.hatch.build.targets.sdist]
include = ["src/unirock"]

[tool.hatch.build.targets.wheel]
include = ["src/unirock"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
    "./src/unirock"
]
